--- a/index.html
+++ b/index.html
@@ -7,6 +7,45 @@
     <link rel="stylesheet" href="Css/style.css"
 </head>
 <body>
-    
+
+<!---navigation bar-->
+
+  <header>
+    <img src="/Users/christianbrown/Desktop/2024 website/Logo.png" alt="logo">
+    <ul>
+        <li>about me</li>
+        <li>projects</li>
+        <li>contact</li>
+        <img src="/Users/christianbrown/Desktop/2024 website/Be.png" alt="behance logo">
+        <img src="/Users/christianbrown/Desktop/2024 website/in.png" alt="linkedin logo">
+        <img src="/Users/christianbrown/Desktop/2024 website/mail.png" alt="mail logo">
+    </ul>
+  </header>
+
+<!---hero image-->
+
+  <container class="hero">
+      <h1>hello<span>!</span></h1>
+      <h2>i'm christian<br>a ux/ui and brand designer<br>based in new york</h2>
+      <button>projects</button>
+      <button>resume</button>
+  </container>
+
+<!---about me-->
+
+  <main>
+    <container class="about-me">
+      <p>i’m a ux/ui designer with a passion for creating beautifully structured, user-centered interfaces. my approach to design focuses on key insights derived from research and user testing and combined with my strong ui and prototyping skills, i strive to create impeccable interfaces designed with the user at the forefront.<br>currently learning javascript.</p>
+      <button>about me</button>
+      <button>resume</button>
+    </container>
+    <container class="how-i-work">
+      <h2>how i work values & principles</h2>
+      <img src="/Users/christianbrown/Desktop/2024 website/Underline.png" alt="underline">
+    </container>
+  </main>
+
+<!---projects-->
+
 </body>
 </html>
