--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="main-dots">
         </div>
         <div class="hero-left">
-          <h1>hello<span class="span">!</span></h1>
+          <h1>hi<span class="span">!</span></h1>
           <h2>i'm <span>christian</span><br>a <span>ux/ui and brand designer</span><br>based in <span>new york</span></h2>
           <div class="buttons">
             <a href="#"><button id="projects">projects</button></a>
