--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     </div>
     <header>
       <ul class="nav-list">
-        <a href="#"><li class="nav-item"><img id="logo" src="/Users/christianbrown/Desktop/2024 website/Files/Logo.png" alt="logo"></li></a>
+        <a href="#"><li class="nav-item"><img id="logo" src="Logo.png" alt="logo"></li></a>
         <a href="#"><li class="nav-item" id="text">about me</li></a>
         <a href="#"><li class="nav-item" id="text">projects</li></a>
         <a href="#"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
       <div class="nav-list2">
-        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/Be.png" alt="behance logo">
+        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="Be.png" alt="behance logo">
         </li></a>
-        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/in.png" alt="linkedin logo">
+        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="in.png" alt="linkedin logo">
         </li></a>
         <a href="mailto:christianbrown988@gmail.com">
-        <li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/mail.png" alt="email logo">
+        <li><img id="symbol" src="mail.png" alt="email logo">
         </li></a>
         <li class="hamburger">
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/hamburger.png">
+          <img src="hamburger.png">
         </li>
       </div>
     </header>
