--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <container class="how-i-work">
         <div>
           <h2>how i work values & principles</h2>
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/Underline.png" alt="underline">
+          <img src="Underline.png" alt="underline">
         </div>
         <div class="grid-container">
           <div class="values">
@@ -113,7 +113,7 @@
       <container class="selected-projects">
         <div>
           <h2>selected projects</h2>
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/Underline.png" alt="underline">
+          <img src="Underline.png" alt="underline">
         </div>
         <div class="project-column">
           <a href="#"><div class="projects">  
@@ -174,11 +174,11 @@
     </main>
     <footer class="footer">
       <div class="foot">
-        <a href="/Users/christianbrown/Desktop/2024 website/Files/Resume.pdf" download="download resume"><button>download resume</button></a>
+        <a href="Resume.pdf" download="download resume"><button>download resume</button></a>
         <div class="icons">
-          <a href="https://www.behance.net/christianbrown20"><img src="/Users/christianbrown/Desktop/2024 website/Files/Behance.png" alt="behance symbol"></a>
-          <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="/Users/christianbrown/Desktop/2024 website/Files/Linked.png" alt="linkedin symbol"></a>
-          <a href="mailto:christianbrown988@gmail.com"><img src="/Users/christianbrown/Desktop/2024 website/Files/Mail 1.png" alt="mail symbol"></a>
+          <a href="https://www.behance.net/christianbrown20"><img src="Behance.png" alt="behance symbol"></a>
+          <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="Linked.png" alt="linkedin symbol"></a>
+          <a href="mailto:christianbrown988@gmail.com"><img src="Mail 1.png" alt="mail symbol"></a>
         </div>
         <div id="email">
           <h4>email</h4>
