--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Brown Design</title>
-    <link rel="stylesheet" href="/Users/christianbrown/Desktop/2024 website/Code/Local code/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   
 
@@ -15,22 +15,22 @@
     </div>
     <header>
       <ul class="nav-list">
-        <a href="#"><li class="nav-item"><img id="logo" src="/Users/christianbrown/Desktop/2024 website/Files/Logo.png" alt="logo"></li></a>
+        <a href="#"><li class="nav-item"><img id="logo" src="Logo.png" alt="logo"></li></a>
         <a href="#"><li class="nav-item" id="text">about me</li></a>
         <a href="#"><li class="nav-item" id="text">projects</li></a>
         <a href="#"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
       <div class="nav-list2">
-        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/Be.png" alt="behance logo">
+        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="Be.png" alt="behance logo">
         </li></a>
-        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/in.png" alt="linkedin logo">
+        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="in.png" alt="linkedin logo">
         </li></a>
         <a href="mailto:christianbrown988@gmail.com">
-        <li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/mail.png" alt="email logo">
+        <li><img id="symbol" src="mail.png" alt="email logo">
         </li></a>
         <li class="hamburger">
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/hamburger.png">
+          <img src="hamburger.png">
         </li>
       </div>
     </header>
@@ -73,7 +73,7 @@
       <container class="how-i-work">
         <div>
           <h2>how i work values & principles</h2>
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/Underline.png" alt="underline">
+          <img src="Underline.png" alt="underline">
         </div>
         <div class="grid-container">
           <div class="values">
@@ -113,7 +113,7 @@
       <container class="selected-projects">
         <div>
           <h2>selected projects</h2>
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/Underline.png" alt="underline">
+          <img src="Underline.png" alt="underline">
         </div>
         <div class="project-column">
           <a href="#"><div class="projects">  
@@ -174,11 +174,11 @@
     </main>
     <footer class="footer">
       <div class="foot">
-        <a href="/Users/christianbrown/Desktop/2024 website/Files/Resume.pdf" download="download resume"><button>download resume</button></a>
+        <a href="Resume.pdf" download="download resume"><button>download resume</button></a>
         <div class="icons">
-          <a href="https://www.behance.net/christianbrown20"><img src="/Users/christianbrown/Desktop/2024 website/Files/Behance.png" alt="behance symbol"></a>
-          <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="/Users/christianbrown/Desktop/2024 website/Files/Linked.png" alt="linkedin symbol"></a>
-          <a href="mailto:christianbrown988@gmail.com"><img src="/Users/christianbrown/Desktop/2024 website/Files/Mail 1.png" alt="mail symbol"></a>
+          <a href="https://www.behance.net/christianbrown20"><img src="Behance.png" alt="behance symbol"></a>
+          <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="Linked.png" alt="linkedin symbol"></a>
+          <a href="mailto:christianbrown988@gmail.com"><img src="Mail 1.png" alt="mail symbol"></a>
         </div>
         <div id="email">
           <h4>email</h4>
