--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Brown Design</title>
-    <link rel="stylesheet" href="/Users/christianbrown/Desktop/2024 website/Code/Local code/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   
 
