--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <header>
       <ul class="nav-list">
-        <a href="#"><li class="nav-item"><img id="logo" src="/Users/christianbrown/Desktop/2024 website/Files/Logo.png" alt="logo"></li></a>
+        <a href="#"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
         <a href="#"><li class="nav-item" id="text">about me</li></a>
         <a href="#"><li class="nav-item" id="text">projects</li></a>
         <a href="#"><li class="nav-item" id="text">contact</li></a>
