--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </div>
     <header>
       <ul class="nav-list">
-        <a href="#"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
-        <a href="#"><li class="nav-item" id="text">about me</li></a>
-        <a href="#"><li class="nav-item" id="text">projects</li></a>
-        <a href="#"><li class="nav-item" id="text">contact</li></a>
+        <a href="http://www.christianbrown-design.com/"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
+        <a href="about.html"><li class="nav-item" id="text">about me</li></a>
+        <a href="elevate.html"><li class="nav-item" id="text">projects</li></a>
+        <a href="#contact"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
       <div class="nav-list2">
@@ -172,7 +172,7 @@
         <h2>want to chat?<br>send me an <a href="mailto:christianbrown988@gmail.com"><span id="chat">email</span></a><br>or check me out on <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><span id="chat">linkedin</span></a></h2>
       </container>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contact">
       <div class="foot">
         <a href="/Users/christianbrown/Desktop/2024 website/Files/Resume.pdf" download="download resume"><button>download resume</button></a>
         <div class="icons">
