--- a/about.html
+++ b/about.html
@@ -15,22 +15,22 @@
     </div>
     <header>
       <ul class="nav-list">
-        <a href="#"><li class="nav-item"><img id="logo" src="/Users/christianbrown/Desktop/2024 website/Files/Logo.png" alt="logo"></li></a>
+        <a href="#"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
         <a href="#"><li class="nav-item" id="text">about me</li></a>
         <a href="#"><li class="nav-item" id="text">projects</li></a>
         <a href="#"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
       <div class="nav-list2">
-        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/Be.png" alt="behance logo">
+        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="Files/Be.png" alt="behance logo">
         </li></a>
-        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/in.png" alt="linkedin logo">
+        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="Files/in.png" alt="linkedin logo">
         </li></a>
         <a href="mailto:christianbrown988@gmail.com">
-        <li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/mail.png" alt="email logo">
+        <li><img id="symbol" src="Files/mail.png" alt="email logo">
         </li></a>
         <li class="hamburger">
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/hamburger.png">
+          <img src="Files/hamburger.png">
         </li>
       </div>
     </header>
@@ -41,7 +41,7 @@
         <container class="about-me">
           <div>
              <h2>about me</h2>
-             <img src="/Users/christianbrown/Desktop/2024 website/Files/Underline.png" alt="underline">
+             <img src="Files/Underline.png" alt="underline">
           </div>
           <div class="about-content">
             <div class="about-dots">
@@ -59,7 +59,7 @@
         <container class="how-i-work">
             <div>
                <h2 id="fun-facts">fun facts</h2>
-               <img src="/Users/christianbrown/Desktop/2024 website/Files/Underline.png" alt="underline">
+               <img src="Files/Underline.png" alt="underline">
             </div>
             <div class="grid-container">
                 <div class="values">
@@ -97,9 +97,9 @@
       <div class="foot">
         <a href="Resume.pdf" download="download resume"><button>download resume</button></a>
         <div class="icons">
-          <a href="https://www.behance.net/christianbrown20"><img src="/Users/christianbrown/Desktop/2024 website/Files/Behance.png" alt="behance symbol"></a>
-          <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="/Users/christianbrown/Desktop/2024 website/Files/Linked.png" alt="linkedin symbol"></a>
-          <a href="mailto:christianbrown988@gmail.com"><img src="/Users/christianbrown/Desktop/2024 website/Files/Mail 1.png" alt="mail symbol"></a>
+          <a href="https://www.behance.net/christianbrown20"><img src="Files/Behance.png" alt="behance symbol"></a>
+          <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="Files/Linked.png" alt="linkedin symbol"></a>
+          <a href="mailto:christianbrown988@gmail.com"><img src="Files/Mail 1.png" alt="mail symbol"></a>
         </div>
         <div id="email">
           <h4>email</h4>
