--- a/elevate.html
+++ b/elevate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Brown Design</title>
-    <link rel="stylesheet" type=“text/css” href="/Users/christianbrown/Desktop/2024 website/Code/Css/style-elevate.css">
+    <link rel="stylesheet" href="Css/style-elevate.css">
   </head>
   
 
