--- a/mtdl.html
+++ b/mtdl.html
@@ -15,10 +15,10 @@
     </div>
     <header>
       <ul class="nav-list">
-        <a href="#"><li class="nav-item"><img id="logo" src="/Users/christianbrown/Desktop/2024 website/Files/Logo.png" alt="logo"></li></a>
-        <a href="#"><li class="nav-item" id="text">home</li></a>
-        <a href="#"><li class="nav-item" id="text">about me</li></a>
-        <a href="#"><li class="nav-item" id="text">projects</li></a>
+        <a href="http://www.christianbrown-design.com/"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
+        <a href="about.html"><li class="nav-item" id="text">about me</li></a>
+        <a href="elevate.html"><li class="nav-item" id="text">projects</li></a>
+        <a href="#contact"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
       <div class="nav-list2">
