--- a/drizzle.html
+++ b/drizzle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Brown Design</title>
-    <link rel="stylesheet" type=“text/css” href="/Users/christianbrown/Desktop/2024 website/Code/Css/style-drizzle.css">
+    <link rel="stylesheet" href="Css/style-drizzle.css">
   </head>
   
 
@@ -22,15 +22,15 @@
       </ul>
       
       <div class="nav-list2">
-        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/Be.png" alt="behance logo">
+        <a href="https://www.behance.net/christianbrown20"><li><img id="symbol" src="Files/Be.png" alt="behance logo">
         </li></a>
-        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/in.png" alt="linkedin logo">
+        <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><li><img id="symbol" src="Files/in.png" alt="linkedin logo">
         </li></a>
         <a href="mailto:christianbrown988@gmail.com">
-        <li><img id="symbol" src="/Users/christianbrown/Desktop/2024 website/Files/mail.png" alt="email logo">
+        <li><img id="symbol" src="Files/mail.png" alt="email logo">
         </li></a>
         <li class="hamburger">
-          <img src="/Users/christianbrown/Desktop/2024 website/Files/hamburger.png">
+          <img src="Files/hamburger.png">
         </li>
       </div>
     </header>
@@ -82,9 +82,9 @@
         <div class="foot">
             <a href="Resume.pdf" download="download resume"><button>download resume</button></a>
             <div class="icons">
-                <a href="https://www.behance.net/christianbrown20"><img src="/Users/christianbrown/Desktop/2024 website/Files/Behance.png" alt="behance symbol"></a>
-                <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="/Users/christianbrown/Desktop/2024 website/Files/Linked.png" alt="linkedin symbol"></a>
-                <a href="mailto:christianbrown988@gmail.com"><img src="/Users/christianbrown/Desktop/2024 website/Files/Mail 1.png" alt="mail symbol"></a>
+                <a href="https://www.behance.net/christianbrown20"><img src="Files/Behance.png" alt="behance symbol"></a>
+                <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="Files/Linked.png" alt="linkedin symbol"></a>
+                <a href="mailto:christianbrown988@gmail.com"><img src="Files/Mail 1.png" alt="mail symbol"></a>
             </div>
             <div id="email">
                 <h4>email</h4>
