--- a/maestro.html
+++ b/maestro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Brown Design</title>
-    <link rel="stylesheet" type=“text/css” href="Css/style-maestro.css">
+    <link rel="stylesheet" href="Css/style-maestro.css">
   </head>
   
 
