--- a/maestro.html
+++ b/maestro.html
@@ -64,10 +64,12 @@
 
 
     <div class="arrows">
+        <a href="elevate.html">
         <div class="l-box">
            <div class="left"></div>
            <div class="left-text">previous</div>
         </div><div class="box">
+           <a href="mtdl.html">
            <div class="right"></div>
            <div class="right-text">next</div>
         </div>
