--- a/maestro.html
+++ b/maestro.html
@@ -64,12 +64,10 @@
 
 
     <div class="arrows">
-        <a href="elevate.html">
-        <div class="l-box">
+        <div class="l-box"><a href="elevate.html">
            <div class="left"></div>
            <div class="left-text">previous</div>
-        </div><div class="box">
-           <a href="mtdl.html">
+        </div><div class="box"><a href="mtdl.html">
            <div class="right"></div>
            <div class="right-text">next</div>
         </div>
