--- a/maestro.html
+++ b/maestro.html
@@ -64,13 +64,18 @@
 
 
     <div class="arrows">
-        <div class="l-box"><a href="elevate.html">
+        <a href="elevate.html">
+          <div class="l-box">
            <div class="left"></div>
            <div class="left-text">previous</div>
-        </div><div class="box"><a href="mtdl.html">
+          </div>
+        </a>
+        <a href="mtdl.html">
+          <div class="box">
            <div class="right"></div>
            <div class="right-text">next</div>
-        </div>
+          </div>
+        </a>
     </div>
 
     </main>
