--- a/mtdl.html
+++ b/mtdl.html
@@ -56,13 +56,18 @@
 
 
     <div class="arrows">
-        <div class="l-box">
+        <a href="maestro.html">
+          <div class="l-box">
            <div class="left"></div>
            <div class="left-text">previous</div>
-        </div><div class="box">
+          </div>
+        </a>
+        <a href="drizzle.html">
+          <div class="box">
            <div class="right"></div>
            <div class="right-text">next</div>
-        </div>
+          </div>
+        </a>
     </div>
 
     </main>
