--- a/drizzle.html
+++ b/drizzle.html
@@ -66,13 +66,18 @@
     <div class="jpg" id="twentyseven"></div>
 
     <div class="arrows">
-        <div class="l-box">
+        <a href="mtdl.html">
+          <div class="l-box">
            <div class="left"></div>
            <div class="left-text">previous</div>
-        </div><div class="box">
+          </div>
+        </a>
+        <a href="flipside.html">
+          <div class="box">
            <div class="right"></div>
            <div class="right-text">next</div>
-        </div>
+          </div>
+        </a>
     </div>
 
     </main>
