--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="nav-list">
         <a href="http://www.christianbrown-design.com/"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
         <a href="about.html"><li class="nav-item" id="text">about me</li></a>
-        <a href="#projects"><li class="nav-item" id="text">projects</li></a>
+        <a href="#projects-main"><li class="nav-item" id="text">projects</li></a>
         <a href="#contact"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
@@ -110,7 +110,7 @@
       </container>
 
       <!--projects-->
-      <container class="selected-projects" id="projects">
+      <container class="selected-projects" id="projects-main">
         <div>
           <h2>selected projects</h2>
           <img src="Files/Underline.png" alt="underline">
