--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </main>
     <footer class="footer" id="contact">
       <div class="foot">
-        <a href="/Users/christianbrown/Desktop/2024 website/Files/Resume.pdf" download="download resume"><button>download resume</button></a>
+        <a href="../Resume.pdf" download="download resume"><button>download resume</button></a>
         <div class="icons">
           <a href="https://www.behance.net/christianbrown20"><img src="Files/Behance.png" alt="behance symbol"></a>
           <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="Files/Linked.png" alt="linkedin symbol"></a>
