--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="nav-list">
         <a href="http://www.christianbrown-design.com/"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
         <a href="about.html"><li class="nav-item" id="text">about me</li></a>
-        <a href="#projects-main"><li class="nav-item" id="text">projects</li></a>
+        <a href="elevate.html"><li class="nav-item" id="text">projects</li></a>
         <a href="#contact"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
@@ -110,13 +110,13 @@
       </container>
 
       <!--projects-->
-      <container class="selected-projects" id="projects-main">
+      <container class="selected-projects">
         <div>
           <h2>selected projects</h2>
           <img src="Files/Underline.png" alt="underline">
         </div>
         <div class="project-column">
-          <a href="#"><div class="projects">  
+          <a href="elevte.html"><div class="projects">  
             <div class="pro-text">
               <h4>ux/ui | responsive web design</h4>
               <h2>elevate</h2>
@@ -126,7 +126,7 @@
             <div class="one">
             </div>
           </div></a>
-          <a href="#"><div class="projects">
+          <a href="maestro.html"><div class="projects">
             <div class="pro-text">
               <h4>ui | native mobile design</h4>
               <h2>maestro</h2>
@@ -136,7 +136,7 @@
             <div class="one" id="two">
             </div>
           </div></a>
-          <a href="#"><div class="projects">
+          <a href="mdtl.html"><div class="projects">
             <div class="pro-text">
               <h4>ux/ui | responsive web design</h4>
               <h2>mdtl</h2>
@@ -146,7 +146,7 @@
             <div class="one" id="three">
             </div>
           </div></a>
-          <a href="#"><div class="projects">
+          <a href="drizzle.html"><div class="projects">
             <div class="pro-text">
               <h4>ux/ui | user testing/branding</h4>
               <h2>drizzle</h2>
@@ -156,7 +156,7 @@
             <div class="one" id="four">
             </div>
           </div></a>
-          <a href="#"><div class="projects">
+          <a href="flipside.html"><div class="projects">
             <div class="pro-text">
               <h4>ux/ui | research and user testing</h4>
               <h2>flip side</h2>
