--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <img src="Files/Underline.png" alt="underline">
         </div>
         <div class="project-column">
-          <a href="elevte.html"><div class="projects">  
+          <a href="elevate.html"><div class="projects">  
             <div class="pro-text">
               <h4>ux/ui | responsive web design</h4>
               <h2>elevate</h2>
