--- a/elevate.html
+++ b/elevate.html
@@ -74,7 +74,7 @@
     </main>
 
 
-    <footer class="footer" id="contact>
+    <footer class="footer" id="contact">
         <div class="foot">
             <a href="Resume.pdf" download="download resume"><button>download resume</button></a>
             <div class="icons">
