--- a/drizzle.html
+++ b/drizzle.html
@@ -83,7 +83,7 @@
     </main>
 
 
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <div class="foot">
             <a href="Resume.pdf" download="download resume"><button>download resume</button></a>
             <div class="icons">
