--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <div><p>i’m a <span>ux/ui designer</span> with a passion for creating beautifully structured, <span>user-centered</span> interfaces. my approach to design focuses on key insights derived from <span>research</span> and <span>user testing</span> and combined with my <span>strong ui</span> and <span>prototyping skills</span>, i strive to create impeccable interfaces designed with the user at the forefront.</p></div>
           <div><p class="push">currently <span>learning javascript</span>.</p></div>
           <div class="about-button">
-            <a href="#"><button id="about-buttons1">about me</button></a>
-            <a href="#"><button id="about-buttons2">resume</button></a>
+            <a href="about.html"><button id="about-buttons1">about me</button></a>
+            <a href="../Resume.pdf" download="download resume"><button id="about-buttons2">resume</button></a> 
           </div>
         </div>
       </container>
