--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <h1>hello<span class="span">!</span></h1>
           <h2>i'm <span>christian</span><br>a <span>ux/ui and brand designer</span><br>based in <span>new york</span></h2>
           <div class="buttons">
-            <a href="#"><button id="projects">projects</button></a>
-            <a href="#"><button id="resume">resume</button></a>
+            <a href="#projects-main"><button id="projects">projects</button></a>
+            <a href="../Resume.pdf"><button id="resume">resume</button></a>
           </div>
         </div>
         <div class="hero-right">
