--- a/flipside.html
+++ b/flipside.html
@@ -66,7 +66,7 @@
     </main>
 
 
-    <footer class="footer" id="contact">
+    <footer class="footer">
         <div class="foot">
             <a href="Resume.pdf" download="download resume"><button>download resume</button></a>
             <div class="icons">
