--- a/mtdl.html
+++ b/mtdl.html
@@ -17,7 +17,7 @@
       <ul class="nav-list">
         <a href="http://www.christianbrown-design.com/"><li class="nav-item"><img id="logo" src="Files/Logo.png" alt="logo"></li></a>
         <a href="about.html"><li class="nav-item" id="text">about me</li></a>
-        <a href="elevate.html"><li class="nav-item" id="text">projects</li></a>
+        <a href="http://www.christianbrown-design.com/#projects-main"><li class="nav-item" id="text">projects</li></a>
         <a href="#contact"><li class="nav-item" id="text">contact</li></a>
       </ul>
       
