--- a/flipside.html
+++ b/flipside.html
@@ -55,10 +55,12 @@
     <div class="jpg" id="seventeen"></div>
 
     <div class="arrows">
-        <div class="box">
+        <a href="drizzle.html">
+           <div class="box">
            <div class="left"></div>
            <div class="right-text">previous</div>
         </div>
+        </a>
     </div>
 
     </main>
