--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h2>i'm <span>christian</span><br>a <span>ux/ui and brand designer</span><br>based in <span>new york</span></h2>
           <div class="buttons">
             <a href="#projects-main"><button id="projects">projects</button></a>
-            <a href="../Resume.pdf"><button id="resume">resume</button></a>
+            <a href="../Resume-ChristianBrown.pdf"><button id="resume">resume</button></a>
           </div>
         </div>
         <div class="hero-right">
@@ -174,7 +174,7 @@
     </main>
     <footer class="footer" id="contact">
       <div class="foot">
-        <a href="../Resume.pdf" download="download resume"><button>download resume</button></a>
+        <a href="../Resume-ChristianBrown.pdf" download="download resume"><button>download resume</button></a>
         <div class="icons">
           <a href="https://www.behance.net/christianbrown20"><img src="Files/Behance.png" alt="behance symbol"></a>
           <a href="https://www.linkedin.com/in/christian-brown-4533a11b9/"><img src="Files/Linked.png" alt="linkedin symbol"></a>
