--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div><p class="push">currently <span>learning javascript</span>.</p></div>
           <div class="about-button">
             <a href="about.html"><button id="about-buttons1">about me</button></a>
-            <a href="../Resume.pdf" download="download resume"><button id="about-buttons2">resume</button></a> 
+            <a href="../Resume-ChristianBrown.pdf" download="download resume"><button id="about-buttons2">resume</button></a> 
           </div>
         </div>
       </container>
